--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 
 
 :root {
---primary-color: #026773;
---secondary-color: #3CA6A6;
---text-color: #024959;
---background-color: #F2E3D5;
---button-hover: #012E40;
+--primary-color: #10dcf3ef;
+--secondary-color: #5c3ca6;
+--text-color: #1a4bd3;
+--background-color: #2bf01a;
+--button-hover: #d33bd3;
 --font-body: "Chocolate Classical Sans", serif;
 --font-titulo: "Rakkas", serif;
 }
